--- a/airpods Max/st.css
+++ b/airpods Max/st.css
@@ -7,9 +7,8 @@
 .container {
   height: 100vh;
   width: 100%;
-  background-color: #f5f5f7;
+  background-color:#f5f5f7;
 }
-
 nav img {
   width: 40px;
 }
@@ -41,7 +40,7 @@ main {
 }
 
 .bigtext h1 {
-  color:white;
+  color: white;
   font-size: 290px;
   line-height: 220px;
   position: absolute;
@@ -63,34 +62,94 @@ main {
   transform: translate(245px, 130px);
 }
 
-.caption h2 {
+.caption h2,
+.margin h2 {
   font-size: 100px;
   line-height: 85px;
   color: rgb(58, 58, 58);
 }
 
-.caption p {
+p {
   margin-top: 30px;
   color: gray;
   line-height: 25px
 }
 
-.caption button {
+.caption button,
+.margin button {
   margin-top: 30px;
   padding: 20px 50px;
   border-radius: 50px;
   color: rgb(183, 183, 183);
   font-size: 20px;
-  box-shadow:  -6px -20px 35px #ffffff, -6px -10px 15px #ffffff, -20px 0px 30px #ffffff, 6px 20px 25px rgba(0,0,0,0.2);
-  transition: .13s ease-in-out;
-  border:4px solid #888888;
-  outline:none;
-  background-color:#f4f5f6;
-  cursor:pointer;
+  box-shadow: 30px 19px 49px rgba(0, 0, 0, 0.2), -8px -12px 29px rgba(0, 0, 0, 0.29);
+  border: 2px solid #dadada;
+  outline: none;
+  background-color: #f5f5f7;
+  cursor: pointer;
 
 }
 
 .pods {
   position: absolute;
   right: 0;
+}
+
+.color {
+  background-color: white;
+}
+
+.description {
+  display: flex;
+}
+
+.description img {
+  width: 450px;
+}
+
+.foto {
+  margin: 60px 50px;
+}
+
+.desc_position h2 {
+  width: 600px;
+  position: relative;
+  right: 200px;
+  top: 150px;
+  font-size: 100px;
+  line-height: 85px;
+  color: rgb(236, 236, 236);
+}
+
+.desc button {
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  font-size: 20px;
+  box-shadow: 30px 19px 49px rgba(0, 0, 0, 0.2), -8px -12px 29px rgba(0, 0, 0, 0.29);
+  border: 2px solid #dadada;
+  background-color: white;
+  color: rgb(208, 208, 208);
+  margin-top: 30px;
+}
+
+.desc {
+  width: 500px;
+  margin-top: 200px;
+}
+
+.airpods img {
+  width: 900px;
+  position: relative;
+  left: 150px;
+}
+
+.airpods {
+  overflow: hidden;
+}
+
+.margin {
+  margin-left: 100px;
+  margin-top: 200px;
+  width: 400px;
 }
