--- a/cleaning/st.css
+++ b/cleaning/st.css
@@ -459,7 +459,7 @@ form {
 .starpink3 {
   position: relative;
   top: 120px;
-  left: 900px;
+  left: 250px;
   width: 35px;
 }
 
@@ -499,6 +499,10 @@ form {
   justify-content: center;
   gap: 250px;
   padding: 50px 0;
+}
+
+.menu {
+  display: none;
 }
 
 .delivery img {
@@ -645,12 +649,50 @@ table td {
 .here {
   text-decoration: underline;
 }
+
 .price_tb2 {
   width: 500px;
 }
+
 .price_tb2 td {
   font-size: 25px;
 }
+
 .font-w {
   text-decoration: underline;
+}
+
+.whats {
+  width: 360px;
+}
+
+.bcolor {
+  background: radial-gradient(78.32% 106.36% at 52.6% 50%, #7FB2FF 0%, #E0ECFF 100%);
+  align-items: center;
+  padding-top: 50px;
+}
+
+.bcolor h1 {
+  color: rgba(0, 63, 147, 1);
+  font-size: 35px;
+  margin-bottom: 30px;
+}
+
+.whatsapp {
+  color: rgba(245, 244, 237, 1);
+  font-size: 30px;
+  background-color: rgba(235, 97, 241, 1);
+  width: 250px;
+  height: 60px;
+  border: none;
+  border-radius: 60px;
+}
+
+.map {
+  margin: 30px 0;
+}
+
+.price_tb3 {
+  width: 500px;
+  line-height: 40px;
 }
