--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ nav {
   text-transform: uppercase;
   color: white;
 }
+
 .first a {
   color: white;
 }
@@ -52,7 +53,9 @@ body {
 
 .border-of-foto {
   width: 500px;
-  height: 600px;
+  /* height: 600px; */
+  display: flex;
+  justify-content: center;
 }
 
 .flex {
@@ -60,17 +63,17 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 50px;
 }
 
 .description h2 {
   font-size: 30px;
+  margin-bottom: 10px;
   text-transform: uppercase;
 }
 
 .description h1 {
   font-size: 50px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   text-transform: uppercase;
 }
 
@@ -78,18 +81,220 @@ body {
   font-size: 20px;
 }
 
-.kontakt_form {
-  margin: 20px;
-  border: none;
-  padding: 10px 30px;
-  background-color: #b8b9bf;
-  color: #592395;
+:root {
+  --glow-color: hsl(186 100% 69%);
+}
+
+
+.glowing-btn {
+  position: relative;
+  color: var(--glow-color);
   cursor: pointer;
-  text-transform: uppercase;
-  border-radius: 20px;
+  padding: 0.5em 1em;
+  border: 0.15em solid var(--glow-color);
+  border-radius: 0.45em;
+  background: none;
+  perspective: 2em;
+  margin-top: 50px;
+  font-family: "Raleway", sans-serif;
+  font-size: 1.5em;
+  font-weight: 900;
+  letter-spacing: 0.5em;
+
+  -webkit-box-shadow: inset 0px 0px 0.5em 0px var(--glow-color),
+    0px 0px 0.5em 0px var(--glow-color);
+  -moz-box-shadow: inset 0px 0px 0.5em 0px var(--glow-color),
+    0px 0px 0.5em 0px var(--glow-color);
+  box-shadow: inset 0px 0px 0.5em 0px var(--glow-color),
+    0px 0px 0.5em 0px var(--glow-color);
+  animation: border-flicker 2s linear infinite;
+}
+
+.glowing-txt {
+  float: left;
+  margin-right: -0.8em;
+  -webkit-text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3),
+    0 0 0.45em var(--glow-color);
+  -moz-text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3),
+    0 0 0.45em var(--glow-color);
+  text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em var(--glow-color);
+  color: hsl(186 100% 69%);
+  animation: text-flicker 3s linear infinite;
+}
+
+.faulty-letter {
+  opacity: 0.5;
+  animation: faulty-flicker 2s linear infinite;
+  color: hsl(186 100% 69%);
+  font-family: "Raleway", sans-serif;
+}
+.faulty-letter2 {
+  opacity: 0.5;
+  animation: faulty-flicker 2s linear infinite;
+  color: hsl(186, 100%, 61%);
+  font-family: "Raleway", sans-serif;
+}
+
+.glowing-btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0.7;
+  filter: blur(1em);
+  transform: translateY(120%) rotateX(95deg) scale(1, 0.35);
+  background: var(--glow-color);
+  pointer-events: none;
+}
+
+.glowing-btn::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0;
+  z-index: -1;
+  background-color: var(--glow-color);
+  box-shadow: 0 0 2em 0.2em var(--glow-color);
+  transition: opacity 100ms linear;
+}
+
+.glowing-btn:hover {
+  color: rgba(0, 0, 0, 0.8);
+  text-shadow: none;
+  animation: none;
+}
+
+.glowing-btn:hover .glowing-txt {
+  animation: none;
+  color:  #161616;
+}
+
+.glowing-btn:hover .faulty-letter {
+  animation: none;
+  text-shadow: none;
+  opacity: 1;
+  color:  #161616;
+}
+
+.glowing-btn:hover:before {
+  filter: blur(1.5em);
+  opacity: 1;
+}
+
+.glowing-btn:hover:after {
+  opacity: 1;
+}
+
+@keyframes faulty-flicker {
+  0% {
+    opacity: 0.1;
+  }
+  2% {
+    opacity: 0.1;
+  }
+  4% {
+    opacity: 0.5;
+  }
+  19% {
+    opacity: 0.5;
+  }
+  21% {
+    opacity: 0.1;
+  }
+  23% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0.5;
+  }
+  83% {
+    opacity: 0.4;
+  }
+
+  87% {
+    opacity: 1;
+  }
+}
+
+@keyframes text-flicker {
+  0% {
+    opacity: 0.1;
+  }
+
+  2% {
+    opacity: 1;
+  }
+
+  8% {
+    opacity: 0.1;
+  }
+
+  9% {
+    opacity: 1;
+  }
+
+  12% {
+    opacity: 0.1;
+  }
+  20% {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0.3;
+  }
+  30% {
+    opacity: 1;
+  }
+
+  70% {
+    opacity: 0.7;
+  }
+  72% {
+    opacity: 0.2;
+  }
+
+  77% {
+    opacity: 0.9;
+  }
+  100% {
+    opacity: 0.9;
+  }
+}
+
+@keyframes border-flicker {
+  0% {
+    opacity: 0.1;
+  }
+  2% {
+    opacity: 1;
+  }
+  4% {
+    opacity: 0.1;
+  }
+
+  8% {
+    opacity: 1;
+  }
+  70% {
+    opacity: 0.7;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .glowing-btn{
+    font-size: 1em;
+  }
 }
 span {
-  color: #592395;
+  color: hsl(186 100% 69%);
 }
 
 .bottom-nav {
@@ -118,8 +323,8 @@ span {
   justify-content: space-between;
   color: white;
   margin-top: 30px;
-  border-bottom: 1px solid #592395;
-  border-top: 1px solid #592395;
+  border-bottom: 1px solid hsl(186, 100%, 61%);
+  border-top: 1px solid hsl(186, 100%, 61%);
 }
 .sites-item img {
   width: 400px;
@@ -130,5 +335,5 @@ span {
 }
 .special-num {
   font-size: 80px;
-  color: #592395;
+  color:  hsl(186, 100%, 61%);
 }
