--- a/retro cars/st.css
+++ b/retro cars/st.css
@@ -28,7 +28,7 @@ nav a {
 
 .banner {
   padding: 65px 50px;
-  border-top: 1px solid rgba(58, 60, 53, 1);
+  border-top: 1px solid rgb(192, 192, 192);
 }
 
 .text_and-button {
@@ -158,6 +158,7 @@ button {
   font-size: 20px;
   width: 400px;
   text-align: justify;
+  color: rgba(58, 60, 53, 1);
 }
 
 .about_us h1 {
@@ -185,11 +186,13 @@ button {
 
 .numbers_item h2 {
   font-size: 120px;
+  color: rgba(58, 60, 53, 1);
 }
 
 .numbers_item h4 {
   font-size: 25px;
   font-weight: 100;
+  color: rgba(58, 60, 53, 1);
 }
 
 .small_text {
@@ -215,11 +218,17 @@ button {
 
 .menu_with_service {
   display: flex;
+  gap: 20px;
 }
 
 .service_item {
   width: 40%;
   height: 400px;
+  border-radius: 5px;
+  color: rgba(255, 255, 255, 1);
+  display: flex;
+  align-items: end;
+  padding: 25px;
 }
 
 .backr1 {
@@ -238,4 +247,157 @@ button {
   background-image: url(./Rectangle\ 18.png);
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.title_and_button {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 40px;
+}
+
+.title_and_button h1,
+.faq h1 {
+  font-size: 90px;
+  color: rgba(58, 60, 53, 1);
+}
+
+.forma {
+  height: 50px;
+  width: 250px;
+  border: 1px solid rgba(58, 60, 53, 1);
+  border-radius: 30px;
+  background-color: transparent;
+  font-weight: 800;
+}
+
+.quetions_service {
+  display: flex;
+  justify-content: space-between;
+  padding: 50px 0;
+}
+
+.faq {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+}
+
+.faq h1 {
+  text-transform: uppercase;
+}
+
+.litte {
+  width: 190px;
+}
+
+.answers_to_qwe {
+  width: 800px;
+}
+
+.answers {
+  display: flex;
+  height: 60px;
+  justify-content: space-between;
+  font-size: 24px;
+  font-weight: 600;
+  border-bottom: 1px solid rgb(137, 137, 137);
+  align-items: center;
+}
+
+.answers img {
+  width: 20px;
+  height: 20px;
+}
+
+.place_company {
+  color: rgba(58, 60, 53, 1);
+}
+
+.place_company h1 {
+  font-size: 90px;
+}
+
+.flex_row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 50px 0;
+}
+
+.contacts a {
+  color: rgba(58, 59, 53, 1);
+  font-size: 24px;
+  font-weight: 900px;
+  margin-bottom: 5px;
+}
+
+.contacts p {
+  font-size: 16px;
+}
+
+.forma2 {
+  border: 1px solid rgba(58, 59, 53, 1);
+  border-radius: 30px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+  font-weight: 800;
+}
+
+.contacts {
+  display: flex;
+  flex-direction: column;
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  border-top: 1px solid rgb(192, 192, 192);
+  padding: 50px 0;
+  height: 200px;
+}
+
+.company_footer h3,.contact_footer a {
+  font-size: 24px;
+  font-weight: 900;
+  margin-bottom: 50px;
+  color: rgba(58, 59, 53, 1);
+}
+
+.text_decotaion {
+  font-size: 14px;
+  text-decoration: underline;
+  color: rgba(58, 59, 53, 1);
+}
+
+.company_of_site {
+  font-size: 14px;
+  color: rgb(115, 115, 115);
+  margin-top: 100px;
+}
+
+.nav_footer {
+  display: flex;
+  gap: 40px;
+}
+
+.left,
+.right {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.left a,
+.right a {
+  color: rgba(58, 60, 53, 1);
+}
+.contact_footer p {
+  color: rgba(58, 59, 53, 1);
+  font-size: 16px;
+  margin-top:50px ;
 }
